@@ -6,7 +6,6 @@
 # consumed the item.
 
 use Coro;
-use Coro::Process;
 use Coro::Semaphore;
 
 my $produced = new Coro::Semaphore 0;
